--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
 # http://EditorConfig.org
 
+# Last updated for:
+# Visual Studio 2017 15.9.0
+
 # Don't show the following warnings with the "EditorConfig Language Service" Visual Studio extension:
 # * Multiple sections: This is done on purpose to group the properties
 # * Unknown keywords: Some properties are not supported yet
@@ -52,26 +55,36 @@ dotnet_style_predefined_type_for_locals_parameters_members       = true:suggesti
 dotnet_style_predefined_type_for_member_access                   = false:suggestion
 
 # Require accessibility modifiers everywhere except in interfaces
-# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.6.3
+# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.9.0
 dotnet_style_require_accessibility_modifiers                     = for_non_interface_members:suggestion
 
-# Suggest more modern language features when available
+# Suggest readonly fields
+dotnet_style_readonly_field                                      = true:suggestion
+
+# Parantheses preferences
+dotnet_style_parentheses_in_arithmetic_binary_operators          = always_for_clarity:silent
+dotnet_style_parentheses_in_relational_binary_operators          = always_for_clarity:silent
+dotnet_style_parentheses_in_other_binary_operators               = always_for_clarity:silent
+dotnet_style_parentheses_in_other_operators                      = never_if_unnecessary:silent
+
+# Suggest more modern language features when available, but not the strange null check
 dotnet_style_object_initializer                                  = true:suggestion
 dotnet_style_collection_initializer                              = true:suggestion
 dotnet_style_explicit_tuple_names                                = true:suggestion
 dotnet_style_prefer_inferred_tuple_names                         = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names         = true:suggestion
-dotnet_style_coalesce_expression                                 = true:suggestion
-dotnet_style_null_propagation                                    = true:suggestion
-
-# Undocumented options
 dotnet_style_prefer_auto_properties                              = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = false:suggestion
+dotnet_style_prefer_conditional_expression_over_assignment       = true:suggestion
+dotnet_style_prefer_conditional_expression_over_return           = true:suggestion
+dotnet_style_coalesce_expression                                 = true:suggestion
+dotnet_style_null_propagation                                    = true:suggestion
 
 
 ## Formatting Conventions (do not support a severity)
 # Sort using and Import directives with System.* appearing first
 dotnet_sort_system_directives_first                              = true
+dotnet_separate_import_directive_groups                          = false
 
 
 
@@ -90,14 +103,14 @@ csharp_style_var_elsewhere                                               = false
 
 # Prefer method-like constructs to have a block body
 # Note: Do not show violations about these rules, it's mostly personal style
-# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.6.3
+# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.9.0
 csharp_style_expression_bodied_methods                                   = false:none
 csharp_style_expression_bodied_constructors                              = false:none
 csharp_style_expression_bodied_operators                                 = false:none
 
 # Prefer property-like constructs to have an expression-body when on a single line
 # Note: Do not show violations about these rules, it's mostly personal style
-# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.6.3
+# Note: Do not add spaces around ':' here, otherwise it will not work in VS2017 as of version 15.9.0
 csharp_style_expression_bodied_properties                                = when_on_single_line:none
 csharp_style_expression_bodied_indexers                                  = when_on_single_line:none
 csharp_style_expression_bodied_accessors                                 = when_on_single_line:none
@@ -132,12 +145,18 @@ csharp_indent_case_contents                                              = true
 csharp_indent_switch_labels                                              = true
 csharp_indent_labels                                                     = one_less_than_current
 
-# Only add spaces after control flow statements
+# Use spaces after control flow statements, around inheritance-colon and around binary operators
 csharp_space_after_cast                                                  = false
 csharp_space_after_keywords_in_control_flow_statements                   = true
 csharp_space_between_method_declaration_parameter_list_parentheses       = false
 csharp_space_between_method_call_parameter_list_parentheses              = false
 csharp_space_between_parentheses                                         = false
+csharp_space_before_colon_in_inheritance_clause                          = true
+csharp_space_after_colon_in_inheritance_clause                           = true
+csharp_space_around_binary_operators                                     = before_and_after
+csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
+csharp_space_between_method_call_name_and_opening_parenthesis            = false
+csharp_space_between_method_call_empty_parameter_list_parentheses        = false
 
 # Break declarations and statements in multiple lines but leave blocks at one line
 csharp_preserve_single_line_statements                                   = false
@@ -148,22 +167,16 @@ csharp_indent_block_contents                                             = true
 csharp_indent_braces                                                     = false
 csharp_indent_case_contents_when_block                                   = false
 csharp_space_between_method_declaration_name_and_open_parenthesis        = false
-csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
-csharp_space_between_method_call_name_and_opening_parenthesis            = false
-csharp_space_between_method_call_empty_parameter_list_parentheses        = false
 csharp_space_around_declaration_statements                               = do_not_ignore
 csharp_space_before_open_square_brackets                                 = false
 csharp_space_between_empty_square_brackets                               = false
 csharp_space_between_square_brackets                                     = false
-csharp_space_after_colon_in_inheritance_clause                           = true
 csharp_space_after_comma                                                 = true
 csharp_space_after_dot                                                   = false
 csharp_space_after_semicolon_in_for_statement                            = true
-csharp_space_before_colon_in_inheritance_clause                          = true
 csharp_space_before_comma                                                = false
 csharp_space_before_dot                                                  = false
 csharp_space_before_semicolon_in_for_statement                           = false
-csharp_space_around_binary_operators                                     = before_and_after
 
 
 
@@ -171,6 +184,10 @@ csharp_space_around_binary_operators                                     = befor
 ### Reference: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-naming-conventions
 [*.{cs,csx,vb,vbx}]
 ## Define naming symbols for later use
+
+# namespaces: Define namespaces
+dotnet_naming_symbols.namespaces.applicable_kinds                  = namespace
+
 # interface_types: Define interfaces
 dotnet_naming_symbols.interface_types.applicable_kinds             = interface
 
@@ -178,11 +195,11 @@ dotnet_naming_symbols.interface_types.applicable_kinds             = interface
 dotnet_naming_symbols.non_interface_types.applicable_kinds         = class,struct,enum,delegate
 
 # async_methods: Define async methods
-dotnet_naming_symbols.async_methods.applicable_kinds               = method
+dotnet_naming_symbols.async_methods.applicable_kinds               = method,local_function
 dotnet_naming_symbols.async_methods.required_modifiers             = async
 
 # non_field_members: Define all members except fields
-dotnet_naming_symbols.non_field_members.applicable_kinds           = property,method,event
+dotnet_naming_symbols.non_field_members.applicable_kinds           = property,method,local_function,event
 
 # constant_fields: Define constant fields
 dotnet_naming_symbols.constant_fields.applicable_kinds             = field
@@ -195,8 +212,11 @@ dotnet_naming_symbols.static_readonly_fields.required_modifiers    = static,read
 # fields: Define all fields
 dotnet_naming_symbols.fields.applicable_kinds                      = field
 
-# parameters: Define parameters
-dotnet_naming_symbols.parameters.applicable_kinds                  = parameter
+# type_parameters: Define type parameters
+dotnet_naming_symbols.type_parameters.applicable_kinds             = type_parameter
+
+# locals: Define locals
+dotnet_naming_symbols.locals.applicable_kinds                      = local,parameter
 
 
 ## Define naming styles for later use
@@ -218,9 +238,19 @@ dotnet_naming_style.camel_case.capitalization                      = camel_case
 dotnet_naming_style.camel_case_underscore.capitalization           = camel_case
 dotnet_naming_style.camel_case_underscore.required_prefix          = _
 
+# pascal_case_t_prefix: Define the PascalCase style with an 'T' prefix
+dotnet_naming_style.pascal_case_t_prefix.capitalization            = pascal_case
+dotnet_naming_style.pascal_case_t_prefix.required_prefix           = T
+
 
 ## Naming Rules, these use the previously defined naming symbols and naming styles
 ## The first rule encountered that can be applied is the only rule that is applied!
+
+# Namespaces must be PascalCase
+dotnet_naming_rule.namespaces_pascal_case.symbols                  = namespaces
+dotnet_naming_rule.namespaces_pascal_case.style                    = pascal_case
+dotnet_naming_rule.namespaces_pascal_case.severity                 = warning
+
 # Interfaces must be PascalCase with an 'I' prefix
 dotnet_naming_rule.interface_types_pascal_case_i_prefix.symbols    = interface_types
 dotnet_naming_rule.interface_types_pascal_case_i_prefix.style      = pascal_case_i_prefix
@@ -256,7 +286,12 @@ dotnet_naming_rule.fields_camel_case.symbols                       = fields
 dotnet_naming_rule.fields_camel_case.style                         = camel_case_underscore
 dotnet_naming_rule.fields_camel_case.severity                      = warning
 
-# Parameters must be camelCase
-dotnet_naming_rule.parameters_camel_case.symbols                   = parameters
-dotnet_naming_rule.parameters_camel_case.style                     = camel_case
-dotnet_naming_rule.parameters_camel_case.severity                  = warning
+# Type parameters must be PascalCase and start with T
+dotnet_naming_rule.type_parameters_pascal_case_t_prefix.symbols    = type_parameters
+dotnet_naming_rule.type_parameters_pascal_case_t_prefix.style      = pascal_case_t_prefix
+dotnet_naming_rule.type_parameters_pascal_case_t_prefix.severity   = warning
+
+# Locals must be camelCase
+dotnet_naming_rule.locals_camel_case.symbols                       = locals
+dotnet_naming_rule.locals_camel_case.style                         = camel_case
+dotnet_naming_rule.locals_camel_case.severity                      = warning
